# Data-Visualize

./: .gitignore  README.md
MM_StoryAgent/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  start.bat  task.md
MM_StoryAgent/configs/: README.md  mm_story_agent.yaml
MM_StoryAgent/django_backend/: First_Test.md  SecondTest.sh  manage.py  pyproject.toml
MM_StoryAgent/django_backend/api/: api.py  apps.py
MM_StoryAgent/django_backend/api/migrations/: 0001_initial.py
MM_StoryAgent/django_backend/api/services/: bootstrap.py  workflow.py
MM_StoryAgent/django_backend/config/: SecondTest.sh  mm_story_agent.yaml  models.yaml
MM_StoryAgent/django_backend/django_backend/: settings.py  wsgi.py
MM_StoryAgent/mm_story_agent/: __init__.py  base.py  config.py  mm_story_agent.py  model_config.py  prompts_en.py  video_compose_agent.py
MM_StoryAgent/mm_story_agent/modality_agents/: __init__.py  freesound_agent.py  image_agent.py  llm.py  music_agent.py  sound_agent.py  speech_agent.py  story_agent.py
MM_StoryAgent/mm_story_agent/utils/: import_utils.py  llm_output_check.py
MM_StoryAgent/story_eval/: eval_prompts.py  rubric_5.json  story_topics.json
django_backend/: .gitignore  API-en-US.md  API.zh-CN.md  API_en-US.md  API_zh-CN.md  DEPLOY.md  FirstTest.sh  README.md  SecondTest.sh  TODO  dump.rdb  manage.py  pyproject.toml
django_backend/Test/: FirstTest.sh  RedisTest.bat  SecondTest.sh  ThirdTest.sh  ffmpeg_test.sh
django_backend/api/: api.py  auth.py  consumers.py  models.py  routing.py  schemas.py  tasks.py
django_backend/api/migrations/: 0001_initial.py
django_backend/api/services/: __init__.py  bootstrap.py  workflow.py
django_backend/config/: mm_story_agent.yaml  models.yaml
django_backend/django_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_backend/old/: video_compose_agent.py
django_story_platform/: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt
django_story_platform/agents/: __init__.py  base_agent.py  image_agent.py  llm.py  mm_story_agent.py  speech_agent.py  story_agent.py  video_agent.py
django_story_platform/api/: consumers.py  media_api.py  media_urls.py  notification_api.py  notification_urls.py  story_api.py  story_urls.py  user_api.py  user_urls.py
django_story_platform/api/serializers/: __init__.py  media_serializers.py  notification_serializers.py  story_serializers.py  user_serializers.py
django_story_platform/core/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_story_platform/models/: __init__.py  media_models.py  notification_models.py  story_models.py  user_models.py
django_story_platform/models/migrations/: 0001_initial.py  __init__.py
django_story_platform/services/: __init__.py  media_service.py  notification_service.py  story_service.py  user_service.py
django_story_platform/tasks/: __init__.py  media_tasks.py  notification_tasks.py  story_tasks.py
story-agent-frontend/: index.html  package-lock.json  package.json  vite.config.ts
story-agent-frontend/src/: App.tsx  main.tsx  nginx.conf
story-agent-frontend/src/components/: ResourceViewer.tsx
story-agent-frontend/src/context/: AuthContext.tsx  WebSocketContext.tsx
story-agent-frontend/src/lib/: api.ts
story-agent-frontend/src/pages/: Dashboard.tsx  Login.tsx  TaskWorkspace.tsx
story-agent-frontend/src/types/: index.ts
