[project]
name = "mm-storyagent"
version = "0.1.0"
description = "An agent, given a topic, generates script, speech, images and finally a video."
authors = [
    {name = "Florenz",email = "florenz@tju.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.10.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "alibabacloud-nls-python-sdk==1.0.2",
    "aliyun-python-sdk-core==2.16.0",
    "aliyun-python-sdk-kms==2.16.5",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "crcmod==1.7",
    "cryptography==46.0.1",
    "cycler==0.12.1",
    "dashscope==1.24.6",
    "datasets==2.20.0",
    "decorator==4.4.2",
    "diffusers==0.35.1",
    "dill==0.3.6",
    "distro==1.9.0",
    "filelock==3.20.0",
    "fonttools==4.60.0",
    "frozenlist==1.7.0",
    "fsspec==2024.5.0",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.1",
    "idna==3.11",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "jiter==0.11.0",
    "jmespath==0.10.0",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.45.1",
    "markupsafe==3.0.2",
    "matplotlib==3.10.7",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "multidict==6.6.4",
    "multiprocess==0.70.14",
    "networkx==3.5",
    "nls",
    "numba==0.62.1",
    "numpy==2.3.4",
    "openai==2.3.0",
    "oss2==2.19.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "pip==25.2",
    "platformdirs==4.4.0",
    "pooch==1.8.2",
    "proglog==0.1.12",
    "propcache==0.3.2",
    "psutil==7.1.0",
    "pyarrow==21.0.0",
    "pyarrow-hotfix==0.7",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pydantic==2.12.2",
    "pydantic-core==2.41.4",
    "pyparsing==3.2.5",
    "pypinyin==0.55.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.9.18",
    "requests==2.32.5",
    "responses==0.18.0",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "tqdm==4.67.1",
    "transformers==4.56.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websocket-client==1.8.0",
    "wheel==0.45.1",
    "xxhash==3.6.0",
    "yarl==1.20.1",
    "zhon==2.1.1",
    "zipp==3.23.0",
]

[tool.poetry]
package-mode = false
name = "mm-storyagent"

[tool.uv.sources]
nls = { git = "https://github.com/aliyun/alibabacloud-nls-python-sdk", rev = "177972b1f02fcb1f2b229e77320a7286d21785f3" }
