[project]
name = "mm-storyagent"
version = "0.1.0"
description = "An agent, given a topic, generates script, speech, images and finally a video."
authors = [
    {name = "Florenz",email = "florenz@tju.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aliyun-python-sdk-core>=2.16.0",
    "dashscope>=1.24.6",
    "hf-xet>=1.1.10",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "moviepy==2.2.0",
    "nls>=1.1.0",
    "numpy>=2.2.6",
    "openai>=2.5.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pyyaml>=6.0.3",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[tool.poetry]
package-mode = false
name = "mm-storyagent"

[tool.uv.sources]
nls = { git = "https://github.com/aliyun/alibabacloud-nls-python-sdk", rev = "177972b1f02fcb1f2b229e77320a7286d21785f3" }
