[project]
name = "django-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "dashscope>=1.24.6",
    "django>=5.2.8",
    "django-celery-results>=2.6.0",
    "django-core>=1.4.1",
    "django-ninja>=1.5.0",
    "hf-xet>=1.1.10",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "moviepy>=2.2.0",
    "numpy>=2.2.6",
    "openai>=2.5.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pyyaml>=6.0.3",
    "redis>=7.0.1",
    "channels>=4.1.0",
    "channels-redis>=4.2.0",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "daphne>=4.2.1",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
torch = [
   { index = "pytorch-cu128" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
